crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__custom_crate_path_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
pub struct CustomReturnAST < 'tokens , 'src , Language > where Language : my_kirin :: Dialect , (pub my_chumsky :: SSAValue < 'src , < SimpleType as my_chumsky :: HasParser < 'tokens , 'src >> :: Output > , :: core :: marker :: PhantomData < fn () -> (& 'tokens () , & 'src () , Language) > ,) ;
