crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__custom_crate_path_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl ::kirin_prettyless::PrettyPrint<CustomReturn> for CustomReturn {
    fn pretty_print<'a>(
        &self,
        doc: &'a ::kirin_prettyless::Document<'a, CustomReturn>,
    ) -> ::kirin_prettyless::ArenaDoc<'a> {
        use kirin_prettyless::DocAllocator;
        let CustomReturn(f0) = self;
        doc.text("return ") + ::kirin_prettyless::PrettyPrint::pretty_print(f0, doc)
    }
}
