crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__empty_enum_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub enum EmptyLangAST<'tokens, 'src: 'tokens, Language: ::kirin::ir::Dialect>
where
    Language: ::kirin::ir::Dialect,
{
    #[doc(hidden)]
    __Marker(
        ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), Language)>,
        ::core::convert::Infallible,
    ),
}
