crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__empty_enum_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl ::kirin_prettyless::PrettyPrint<EmptyLang> for EmptyLang {
    fn pretty_print<'a>(
        &self,
        doc: &'a ::kirin_prettyless::Document<'a, EmptyLang>,
    ) -> ::kirin_prettyless::ArenaDoc<'a> {
        use kirin_prettyless::DocAllocator;
        match self {}
    }
}
