crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_all_wrappers_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl ::kirin::pretty::PrettyPrint<ComposedLang> for ComposedLang {
    fn pretty_print<'a>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, ComposedLang>,
    ) -> ::kirin::pretty::ArenaDoc<'a> {
        use kirin::pretty::DocAllocator;
        match self {
            ComposedLang::Arith(inner) => {
                let doc_inner: &'a ::kirin::pretty::Document<'a, ArithDialect> =
                    unsafe { ::core::mem::transmute(doc) };
                ::kirin::pretty::PrettyPrint::pretty_print(inner, doc_inner)
            }
            ComposedLang::Control(inner) => {
                let doc_inner: &'a ::kirin::pretty::Document<'a, ControlDialect> =
                    unsafe { ::core::mem::transmute(doc) };
                ::kirin::pretty::PrettyPrint::pretty_print(inner, doc_inner)
            }
        }
    }
}
