crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_mixed_wrappers_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
#[automatically_derived]
impl ::kirin::pretty::PrettyPrint for MixedLang {
    fn pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        match self {
            MixedLang::Arith(inner) => ::kirin::pretty::PrettyPrint::pretty_print(inner, doc),
            MixedLang::Custom {
                arg: f_arg,
                res: f_res,
            } => {
                ::kirin::pretty::PrettyPrint::pretty_print_name(f_res, doc)
                    + doc.text(" = custom ")
                    + ::kirin::pretty::PrettyPrint::pretty_print(f_arg, doc)
                    + doc.text(" -> ")
                    + ::kirin::pretty::PrettyPrint::pretty_print_type(f_res, doc)
            }
            MixedLang::Control(inner) => ::kirin::pretty::PrettyPrint::pretty_print(inner, doc),
        }
    }
}
