crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_tuple_variants_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub enum TupleLangAST<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput>
where
    TypeOutput: Clone + PartialEq + 'tokens,
    LanguageOutput: Clone + PartialEq + 'tokens,
{
    Return(
        ::kirin::parsers::SSAValue<
            'src,
            <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
        >,
    ),
    Neg(
        ::kirin::parsers::SSAValue<
            'src,
            <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
        >,
        ::kirin::parsers::ResultValue<
            'src,
            <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
        >,
    ),
    #[doc(hidden)]
    __Marker(
        ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), TypeOutput, LanguageOutput)>,
        ::core::convert::Infallible,
    ),
}
#[doc = r" Self-referential wrapper for standalone use."]
#[doc = r""]
#[doc = r" This type sets `LanguageOutput = Self`, creating a self-referential"]
#[doc = r" AST type suitable for use with `HasParser`."]
#[derive(Clone, Debug, PartialEq)]
pub struct TupleLangASTSelf<'tokens, 'src: 'tokens, TypeOutput>(
    pub TupleLangAST<'tokens, 'src, TypeOutput, TupleLangASTSelf<'tokens, 'src, TypeOutput>>,
    ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), TypeOutput)>,
)
where
    TypeOutput: Clone + PartialEq,
    'src: 'tokens;
impl<'tokens, 'src, TypeOutput> TupleLangASTSelf<'tokens, 'src, TypeOutput>
where
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
{
    #[doc = r" Creates a new ASTSelf wrapper."]
    pub fn new(
        inner: TupleLangAST<'tokens, 'src, TypeOutput, TupleLangASTSelf<'tokens, 'src, TypeOutput>>,
    ) -> Self {
        Self(inner, ::core::marker::PhantomData)
    }
}
