crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_tuple_variants_emit.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: emit
---
impl<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput, Language>
    ::kirin::parsers::EmitIR<Language> for TupleLangAST<'tokens, 'src, TypeOutput, LanguageOutput>
where
    Language: ::kirin::ir::Dialect + From<TupleLang>,
    TypeOutput: Clone + PartialEq,
    LanguageOutput: Clone + PartialEq + 'tokens,
    LanguageOutput: ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output: ::kirin::parsers::EmitIR<
        Language,
        Output = <Language as ::kirin::ir::Dialect>::TypeLattice,
    >,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        match self {
            TupleLangAST::Return(f0) => {
                let f0_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f0, ctx);
                let dialect_variant: TupleLang = TupleLang::Return(f0_ir.into());
                ctx.context.statement().definition(dialect_variant).new()
            }
            TupleLangAST::Neg(f0, f1) => {
                let f0_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f0, ctx);
                let f1_ir: ::kirin::ir::ResultValue = ::kirin::parsers::EmitIR::emit(f1, ctx);
                let dialect_variant: TupleLang = TupleLang::Neg(f0_ir.into(), f1_ir.into());
                ctx.context.statement().definition(dialect_variant).new()
            }
            TupleLangAST::__Marker(_, unreachable) => match *unreachable {},
        }
    }
}
impl<'tokens, 'src, TypeOutput, Language> ::kirin::parsers::EmitIR<Language>
    for TupleLangASTSelf<'tokens, 'src, TypeOutput>
where
    Language: ::kirin::ir::Dialect + From<TupleLang>,
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output: ::kirin::parsers::EmitIR<
        Language,
        Output = <Language as ::kirin::ir::Dialect>::TypeLattice,
    >,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        ::kirin::parsers::EmitIR::emit(&self.0, ctx)
    }
}
